[metadata]
name = ticktalkpython
version = 0.11.0
author = Anonymous
author_email = anonymous@example.com
description = TPython is a language, compiler and runtime for the IoT
long_description = file: README.md
long_description_content_type = text/markdown
url = <REDACTED>
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = ticktalkpython
packages = find:
python_requires = >=3.7

[options.packages.find]
where = ticktalkpython
